--- a/Styles/style.css
+++ b/Styles/style.css
@@ -30,22 +30,23 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--font-primaria);
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--font-secundaria);
 }
 
@@ -57,16 +58,16 @@ body{
     gap: 32px;
 }
 
-.apresentacao__links__link{
+.apresentacao__links__navegacao{
     display: flex;
     justify-content: center;
     gap: 16px;
 
     border: 2px solid var(--cor-tercearia);
     border-radius: 8px;
-    width: 378px;
+    width: 50%;
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -82,7 +83,7 @@ body{
 .apresentacao__links__subtitulo{
     font-family: var(--font-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .rodape {
@@ -90,7 +91,7 @@ body{
     background-color: var(--cor-tercearia);
     padding: 24px;
     text-align: center;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     font-family: var(--font-secundaria);
 }
@@ -107,11 +108,31 @@ body{
 .cabecalho__menu__link {
     font-weight: 600;
     font-family: var(--font-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     color: var(--cor-tercearia);
     text-decoration: none;
 }
 
 .apresentacao__imagem {
     border-radius: 5%;
+    width: 50%;
+}
+
+@media(max-width: 1200px){
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+justify-content: center;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+    }
 }
